[package]
name = "eureka"
version = "0.1.0"
authors = ["floppyhammer <tannhauser_chen@outlook.com>"]
edition = "2021"
resolver = "2"

[dependencies]
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
winit = "0.30.12"
cgmath = "0.18"
env_logger = "0.11.0"
log = "0.4"
wgpu = { version = "26.0.1", features = ["naga-ir"] }
pollster = "0.4.0"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
# For .obj loading.
tobj = "4.0.0"
chrono = "0.4.19"
# For JSON parsing.
serde_json = "1.0"
# For vector rendering.
lyon = "1.0.0"
# Tree structure.
indextree = "4.4.0"
# Text rasterization.
fontdue = "0.8.0"
# Text shaping.
rustybuzz = "0.12.1"
allsorts = "0.14.0"
# Language detection.
whatlang = "0.16.2"
# Text bidi.
unicode-bidi = "0.3.8"
# Text line break.
unicode-linebreak = "0.1.5"
# Finding system fonts.
font-kit = "0.12.0"
# For splitting grapheme clusters.
unicode-segmentation = "1.10.0"
# SVG parsing.
usvg = "0.38.0"
# Assets management.
assets_manager = { version = "0.11.2", features = ["hot-reloading", "image"] }
bitflags = { version = "2.4.1", features = [] }
# Shader preprocessing.
naga_oil = "0.19.0"
naga = "26.0.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[example]]
name = "sprite"
path = "examples/sprite.rs"

[[example]]
name = "3d"
path = "examples/3d.rs"

[[example]]
name = "label"
path = "examples/label.rs"
