[package]
name = "eureka"
version = "0.1.0"
authors = ["floppyhammer <tannhauser_chen@outlook.com>"]
edition = "2021"
resolver = "2"

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
] }
winit = "0.30.12"
glam = "0.33.1"
env_logger = "0.11.0"
log = "0.4"
wgpu = { version = "29.0.3" }
pollster = "0.4.0"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
# For .obj loading.
tobj = "4.0.0"
# For glTF loading.
gltf = "1.4.1"
hecs = "0.11.0"
# Text rasterization.
fontdue = "0.9.3"
# Text shaping.
rustybuzz = "0.12.1"
allsorts = "0.14.0"
# Language detection.
whatlang = "0.16.2"
# Text bidi.
unicode-bidi = "0.3.8"
# Text line break.
unicode-linebreak = "0.1.5"
# Finding system fonts.
font-kit = "0.14.3"
bitflags = { version = "2.4.1", features = [] }
rayon = "1.8"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[[example]]
name = "sprite"
path = "examples/sprite.rs"

[[example]]
name = "3d"
path = "examples/3d.rs"

[[example]]
name = "label"
path = "examples/label.rs"

[[example]]
name = "transparency"
path = "examples/transparency.rs"
