[package]
name = "pliocene_scene"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }



env_logger = "0.10.0"
log = "0.4"

pollster = "0.3.0"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"

chrono = "0.4.19"
# For JSON parsing.
serde_json = "1.0"

# Tree structure.
indextree = "4.4.0"
